# BMCUSB

./: CMakeLists.txt  HOWTO  Makefile  README
data/: MultiDM-00.map  MultiDM-01.map
src/: BMC_Mappings.h  CIUsbLib.h  CIUsbShared.h  CMakeLists.txt  HostDrv.h  Makefile  MyAutoLock.h  Resource.h  UsbCom.h  UsbExMulti.cpp  Win32Error.h  bmcusb.c  bmcusb.h  bmcusb_defs.h  initBMC.m  lsbmc  mexBMC.c  playBMC.c  playMorph.c  pokeBMC.m  scanPokeTest.m  scanZernikesOnDM.m  setBMC.m  stdafx.cpp  stdafx.h  stopBMC.m  testbmcusb.c
